kubernetes/istio/dr.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: phonebook-service
  namespace: phonebook-v1
spec:
  host: phonebook-service
  subsets:
  - name: v1
    labels:
      version: '1.0'
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN       
      connectionPool:
        http:
          http1MaxPendingRequests: 10
          maxRequestsPerConnection: 1
      outlierDetection:
        baseEjectionTime: 1m
        consecutive5xxErrors: 1
        interval: 1s
        maxEjectionPercent: 100
  - name: v2
    labels:
      version: '2.0'
