kubernetes/istio/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingressgateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      number: 8080
      name: http-web
      protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ingressgateway
spec:
  hosts:
  - '*'
  gateways:
  - ingressgateway
  http:
  - route:
    - destination:
        host: phonebook-service
        port:
          number: 8080
