kubernetes/istio/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ingressgateway
spec:
  hosts:
  - '*'
  gateways:
  - ingressgateway
  http:
  - fault:
      abort:
        httpStatus: 501
        percentage:
          value: 10
    route:
    - destination:
        host: phonebook-service
        subset: v1
      weight: 50
    - destination:
         host: phonebook-service
         subset: v2
      weight: 50
